--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,105 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* 
+:root{
+    --transparent: transparent;
+    --white: #ffffff;
+    --white-rgb: 255, 255, 255;
+    --black: #000000;
+    --black-rgb: 0, 0, 0;
+    --gray-50: #F6F6F6;
+    --gray-50-rgb: 246, 246, 246;
+    --gray-100: #F2F2F2;
+    --gray-100-rgb: 242, 242, 242;
+    --gray-200: #C6C6C6;
+    --gray-200-rgb: 198, 198, 198;
+    --gray-300: #939393;
+    --gray-300-rgb: 147, 147, 147;
+    --gray-400: #838383;
+    --gray-400-rgb: 131, 131, 131;
+    --gray-500: #4D4D4D;
+    --gray-500-rgb: 77, 77, 77;
+    --gray-600: #434343;
+    --gray-600-rgb: 67, 67, 67;
+    --gray-700: #2C2C2C;
+    --gray-700-rgb: 44, 44, 44;
+    --gray-800: #222222;
+    --gray-800-rgb: 34, 34, 34;
+    --gray-900: #181818;
+    --gray-900-rgb: 24, 24, 24;
+    --gray: #838383;
+    --gray-rgb: 131, 131, 131;
+    --blue-100: #EEF4FF;
+    --blue-100-rgb: 238, 244, 255;
+    --blue-300: #6CC6F8;
+    --blue-300-rgb: 108, 198, 248;
+    --blue-500: #3F80F1;
+    --blue-500-rgb: 63, 128, 241;
+    --blue-700: #3653E8;
+    --blue-700-rgb: 54, 83, 232;
+    --blue-900: #2722B7;
+    --blue-900-rgb: 39, 34, 183;
+    --blue: #3F80F1;
+    --blue-rgb: 63, 128, 241;
+    --violet-100: #EFEAFD;
+    --violet-100-rgb: 239, 234, 253;
+    --violet-300: #B9AAF9;
+    --violet-300-rgb: 185, 170, 249;
+    --violet-500: #9B86F7;
+    --violet-500-rgb: 155, 134, 247;
+    --violet-700: #816AF4;
+    --violet-700-rgb: 129, 106, 244;
+    --violet-900: #5B43EA;
+    --violet-900-rgb: 91, 67, 234;
+    --violet: #9B86F7;
+    --violet-rgb: 155, 134, 247;
+    --green-100: #E2F8ED;
+    --green-100-rgb: 226, 248, 237;
+    --green-300: #84E1B6;
+    --green-300-rgb: 132, 225, 182;
+    --green-500: #3CD699;
+    --green-500-rgb: 60, 214, 153;
+    --green-700: #00CC81;
+    --green-700-rgb: 0, 204, 129;
+    --green-900: #00B161;
+    --green-900-rgb: 0, 177, 97;
+    --green: #3CD699;
+    --green-rgb: 60, 214, 153;
+    --pink-100: #FFE7FA;
+    --pink-100-rgb: 255, 231, 250;
+    --pink-300: #FFA9F0;
+    --pink-300-rgb: 255, 169, 240;
+    --pink-500: #FF60E5;
+    --pink-500-rgb: 255, 96, 229;
+    --pink-700: #D946EF;
+    --pink-700-rgb: 217, 70, 239;
+    --pink-900: #B900C3;
+    --pink-900-rgb: 185, 0, 195;
+    --pink: #FF60E5;
+    --pink-rgb: 255, 96, 229;
+    --yellow-100: #FFF8C2;
+    --yellow-100-rgb: 255, 248, 194;
+    --yellow-300: #FFE94E;
+    --yellow-300-rgb: 255, 233, 78;
+    --yellow-500: #FFD62A;
+    --yellow-500-rgb: 255, 214, 42;
+    --yellow-700: #FBA41C;
+    --yellow-700-rgb: 251, 164, 28;
+    --yellow-900: #F87A10;
+    --yellow-900-rgb: 248, 122, 16;
+    --yellow: #FFD62A;
+    --yellow-rgb: 255, 214, 42;
+    --red-100: #FFDEE4;
+    --red-100-rgb: 255, 222, 228;
+    --red-300: #F8A0A2;
+    --red-300-rgb: 248, 160, 162;
+    --red-500: #FF5C5C;
+    --red-500-rgb: 255, 92, 92;
+    --red-700: #F74342;
+    --red-700-rgb: 247, 67, 66;
+    --red-900: #C82728;
+    --red-900-rgb: 200, 39, 40;
+    --red: #FF5C5C;
+    --red-rgb: 255, 92, 92;
+} */
