add video and no q&a

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,5 +105,16 @@
 } */
 
 li {
-    list-style:disc
+  list-style: disc;
+}
+
+#background-video {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
 }
